--- a/Ecommerce/Views/MisComprasPage.xaml
+++ b/Ecommerce/Views/MisComprasPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Ecommerce.Views.MisComprasPage"
-             
+             BackgroundColor="#820000"
              xmlns:model="clr-namespace:Ecommerce.DTOs"
              Title=""
                Shell.TabBarIsVisible="False"
