--- a/Ecommerce/Views/MisComprasPage.xaml
+++ b/Ecommerce/Views/MisComprasPage.xaml
@@ -28,23 +28,23 @@
                         <Frame HorizontalOptions="FillAndExpand">
                             <StackLayout Orientation="Vertical" Spacing="5">
                                 <StackLayout Orientation="Horizontal">
-                                    <Label Text="Numero de compra:" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="StartAndExpand"/>
-                                    <Label Text="{Binding NumeroCompra}" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="EndAndExpand"/>
+                                    <Label Text="Numero de compra:"  FontFamily="Charger Sport Black Extended" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="StartAndExpand"/>
+                                    <Label Text="{Binding NumeroCompra}"  FontFamily="Charger Sport Black Extended" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="EndAndExpand"/>
                                 </StackLayout>
                                 <Border HorizontalOptions="FillAndExpand" Stroke="#dadada"></Border>
                                 <StackLayout Orientation="Horizontal">
-                                    <Label Text="Enviado a:" FontSize="Subtitle"  HorizontalOptions="StartAndExpand"/>
-                                    <Label Text="{Binding RefDireccion.NombreDireccion}" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="EndAndExpand"/>
+                                    <Label Text="Enviado a:" FontSize="Subtitle"  FontFamily="Charger Sport Black Extended" HorizontalOptions="StartAndExpand"/>
+                                    <Label Text="{Binding RefDireccion.NombreDireccion}"  FontFamily="Charger Sport Black Extended" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="EndAndExpand"/>
                                 </StackLayout>
                                 <StackLayout Orientation="Horizontal">
-                                    <Label Text="Pagado con:" FontSize="Subtitle" HorizontalOptions="StartAndExpand"/>
-                                    <Label Text="{Binding RefTarjeta.NombreTarjeta}" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="EndAndExpand"/>
+                                    <Label Text="Pagado con:" FontSize="Subtitle"  FontFamily="Charger Sport Black Extended" HorizontalOptions="StartAndExpand"/>
+                                    <Label Text="{Binding RefTarjeta.NombreTarjeta}"  FontFamily="Charger Sport Black Extended" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="EndAndExpand"/>
                                 </StackLayout>
                                 <Border HorizontalOptions="FillAndExpand" Stroke="#dadada"></Border>
                                 <StackLayout Orientation="Horizontal">
-                                    <Label Text="{Binding FechaRegistro}" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="StartAndExpand"/>
-                                    <Label Text="Total:" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="EndAndExpand"/>
-                                    <Label Text="{Binding Total,StringFormat='{0:C}'}" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="EndAndExpand" TextColor="#1d94ab"/>
+                                    <Label Text="{Binding FechaRegistro}"  FontFamily="Charger Sport Black Extended" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="StartAndExpand"/>
+                                    <Label Text="Total:" FontSize="Subtitle"  FontFamily="Charger Sport Black Extended" FontAttributes="Bold" HorizontalOptions="EndAndExpand"/>
+                                    <Label Text="{Binding Total,StringFormat='{0:C}'}"  FontFamily="Charger Sport Black Extended" FontSize="Subtitle" FontAttributes="Bold" HorizontalOptions="EndAndExpand" TextColor="#1d94ab"/>
                                 </StackLayout>
                             </StackLayout>
                         </Frame>
