--- a/Ecommerce/Views/RegisterPage.xaml
+++ b/Ecommerce/Views/RegisterPage.xaml
@@ -36,7 +36,7 @@
             <VerticalStackLayout Padding="30">
                 <Entry Text="{Binding Usuario}" Grid.Row="3" Placeholder="Email" />
                 <Entry Text="{Binding Password}" Grid.Row="3" Placeholder="Password" IsPassword="True" Margin="0,0,0,10"/>
-
+                <Label Text="{Binding ErrorMessage}" TextColor="Black" IsVisible="{Binding IsErrorVisible}" />
                 <Button Grid.Row="4" Text="Registrar" HeightRequest="50" FontSize="Medium" TextColor="Black" BackgroundColor="#1d94ab" Command="{Binding RegisterCommand}" Margin="0,0,0,10"/>
                 <Button  Grid.Row="5" Text="Volver" HeightRequest="50" FontSize="Medium" TextColor="Black" BackgroundColor="White" Command="{Binding VolverCommand}" />
             </VerticalStackLayout>
