Mejoras del color y los bordes

--- a/Ecommerce/Views/DireccionPage.xaml
+++ b/Ecommerce/Views/DireccionPage.xaml
@@ -6,7 +6,7 @@
              
              Shell.NavBarIsVisible="False"
              Shell.TabBarIsVisible="False"
-             BackgroundColor="LightCoral"
+             BackgroundColor="LightPink"
              >
 
     <StackLayout Orientation="Vertical" Spacing="10">
