--- a/Ecommerce/Views/LoginPage.xaml
+++ b/Ecommerce/Views/LoginPage.xaml
@@ -9,38 +9,39 @@
     <ContentPage.BindingContext>
         <vm:LoginViewModel/>
     </ContentPage.BindingContext>
+    <Frame BackgroundColor="#820000" BorderColor="White" HeightRequest="750" WidthRequest="350">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="1*" />
-        </Grid.RowDefinitions>
+
+            <StackLayout Grid.Row="1" Orientation="Vertical" Spacing="30">
+                <Border Grid.Row="1" VerticalOptions="Center" HorizontalOptions="Center" Margin="0,0"  StrokeThickness="2" Stroke="LightPink">
+                    <Image Margin="0,0" HeightRequest="250" WidthRequest="300" Source="login.png" VerticalOptions="Center" HorizontalOptions="Center" Aspect="AspectFit" />
+                    <Border.StrokeShape>
+                        <RoundRectangle CornerRadius="50,0,0,50"/>
+                    </Border.StrokeShape>
+                </Border>
+
+                <Label Text="Bienvenido" TextColor="Black" FontSize="Title" HorizontalOptions="Center" FontAttributes="Bold"></Label>
+
+                <StackLayout Orientation="Vertical" Margin="0,10" Spacing="5" HorizontalOptions="Center">
+                    <Label Text="Ingrese sus credenciales" FontSize="Small" FontFamily="Charger Sport Black Extended" HorizontalOptions="Center"/>
+                </StackLayout>
 
 
-        <StackLayout Grid.Row="1" Orientation="Vertical" Spacing="30">
-            <Border Grid.Row="1" VerticalOptions="Center" HorizontalOptions="Center" Margin="0,0"  StrokeThickness="2" Stroke="LightPink">
-                <Image Margin="0,0" HeightRequest="250" WidthRequest="300" Source="login.png" VerticalOptions="Center" HorizontalOptions="Center" Aspect="AspectFit" />
-                <Border.StrokeShape>
-                    <RoundRectangle CornerRadius="50,0,0,50"/>
-                </Border.StrokeShape>
-            </Border>
+                <StackLayout Orientation="Vertical" Spacing="5" HorizontalOptions="FillAndExpand" Padding="30,0">
+                    <Entry Text="{Binding Usuario}" Grid.Row="3" Placeholder="Usuario"/>
+                    <Entry Text="{Binding Password}" Grid.Row="3" Placeholder="Contraseña" IsPassword="True" Margin="0,0,0,10"/>
+                    <Label Text="{Binding ErrorMessage}" TextColor="Black" IsVisible="{Binding IsErrorVisible}" />
+                    <Button  Grid.Row="5"  TextColor="Black" Text="Iniciar sesion" HeightRequest="50" FontSize="Medium" BackgroundColor="White" Command="{Binding LoginCommand}" Margin="0,0,0,10"/>
+                    <Button  Grid.Row="6" TextColor="Black" Text="¿No tienes una cuenta? Regístrese aquí" HeightRequest="50" FontSize="Medium" BackgroundColor="#1d94ab" Command="{Binding RegisterCommand}"/>
+                </StackLayout>
 
-            <Label Text="Bienvenido" TextColor="Black" FontSize="Title" HorizontalOptions="Center" FontAttributes="Bold"></Label>
-
-            <StackLayout Orientation="Vertical" Margin="0,10" Spacing="5" HorizontalOptions="Center">
-                <Label Text="Ingrese sus credenciales" FontSize="Small" FontFamily="Charger Sport Black Extended" HorizontalOptions="Center"/>
             </StackLayout>
-
-
-            <StackLayout Orientation="Vertical" Spacing="5" HorizontalOptions="FillAndExpand" Padding="30,0">
-                <Entry Text="{Binding Usuario}" Grid.Row="3" Placeholder="Usuario"/>
-                <Entry Text="{Binding Password}" Grid.Row="3" Placeholder="Contraseña" IsPassword="True" Margin="0,0,0,10"/>
-                <Label Text="{Binding ErrorMessage}" TextColor="Black" IsVisible="{Binding IsErrorVisible}" />
-                <Button  Grid.Row="5"  TextColor="Black" Text="Iniciar sesion" HeightRequest="50" FontSize="Medium" BackgroundColor="White" Command="{Binding LoginCommand}" Margin="0,0,0,10"/>
-                <Button  Grid.Row="6" TextColor="Black" Text="¿No tienes una cuenta? Regístrese aquí" HeightRequest="50" FontSize="Medium" BackgroundColor="#1d94ab" Command="{Binding RegisterCommand}"/>
-            </StackLayout> 
-
-        </StackLayout>
-    </Grid>
+        </Grid>
+    </Frame>
 </ContentPage>
