--- a/Ecommerce/Views/DetalleProducto.xaml
+++ b/Ecommerce/Views/DetalleProducto.xaml
@@ -4,7 +4,7 @@
              x:Class="Ecommerce.Views.DetalleProducto"
              Title="Detalle Producto"
              Shell.TabBarIsVisible="False"
-             BackgroundColor="LightCoral"
+             BackgroundColor="LightPink"
              >
 
     <ScrollView>
